# claude-code-line-swap-flicker-repro

./: .gitignore  FALSE_POSITIVE_ANALYSIS.md  README.md  analyze-flicker.py  analyze_flicker.py  conftest.py  flicker-report.md  flicker.db  pyproject.toml  stage3_categorize.py  test_analyze_flicker.py  test_properties.py
